<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="#C67A7A" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_use_the_app_login"
        android:textSize="32sp"
        android:textColor="#C67A7A"
        android:layout_marginTop="32dp"
        android:gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="16dp"
        android:backgroundTint="@color/pink"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"/>
</LinearLayout>